--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -11,9 +11,18 @@ $breakpoints: (
 $font: 'Proxima Nova', 'Helvetica Neue', Arial, sans-serif;
 $font-head: 'Affect', 'Helvetica Neue', Arial, sans-serif;
 
-$container_width: 1480px;
+$container_width: 1540px;
 
 $gutter: 12px;
+$gutter-mobile: 10px;
+
+$pad-xxl: 100px;
+$pad-xl: 80px;
+$pad-l: 60px;
+$pad-m: 40px;
+$pad-s: 30px;
+$pad-xs: 20px;
+$pad-xxs: 10px;
 
 $light-blue: #72e1f4;
 $link-color: #7bd3e6;
