--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -21,3 +21,42 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'icomoon';
+	src:  url('../fonts/icomoon.eot?3vwpvm');
+	src:  url('../fonts/icomoon.eot?3vwpvm#iefix') format('embedded-opentype'),
+	url('../fonts/icomoon.ttf?3vwpvm') format('truetype'),
+	url('../fonts/icomoon.woff?3vwpvm') format('woff'),
+	url('../fonts/icomoon.svg?3vwpvm#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+i {
+	/* use !important to prevent issues with browser extensions that change fonts */
+	font-family: 'icomoon' !important;
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.i-soc-fb:before {
+	content: "\e900";
+}
+.i-soc-insta:before {
+	content: "\e901";
+}
+.i-soc-vk:before {
+	content: "\e902";
+}
+.i-soc-you:before {
+	content: "\e903";
+}
