--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -30,15 +30,23 @@
 	}
 }
 
-.row{
+.row {
 	display: flex;
 	flex-wrap: wrap;
 	margin-left: -$gutter;
 	margin-right: -$gutter;
+	@include res(l) {
+		margin-left: -$gutter-mobile;
+		margin-right: -$gutter-mobile;
+	}
 
-	[class^="grid"]{
+	[class^="grid"] {
 		padding-left: $gutter;
 		padding-right: $gutter;
+		@include res(l) {
+			padding-left: $gutter-mobile;
+			padding-right: $gutter-mobile;
+		}
 	}
 
 	&--center {
@@ -49,12 +57,12 @@
 	}
 }
 
-.row-ng{
+.row-ng {
 	display: flex;
 	flex-wrap: wrap;
 }
 
-.clearfix{
+.clearfix {
 	&:before{
 		content: " ";
 		display: table;
