--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -1,10 +1,10 @@
 body {
 	padding-left: 300px;
 	@include res(xl) {
-		padding-left: 280px;
+		padding-left: 260px;
 	}
 	@include res(l) {
-		padding-left: 240px;
+		padding-left: 200px;
 	}
 	@include res(m) {
 		padding-left: 0;
@@ -16,8 +16,12 @@ body {
 	width: 100%;
 	max-width: $container_width;
 	margin: 0 auto;
-	padding-left: 16px;
-	padding-right: 16px;
+	padding-left: $gutter;
+	padding-right: $gutter;
+	@include res(l) {
+		padding-left: $gutter-mobile;
+		padding-right: $gutter-mobile;
+	}
 }
 
 .aside-panel {
