--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
+@import 'helpers/reset';
 @import 'helpers/variables';
 @import 'helpers/mixins';
 @import 'helpers/placeholders';
@@ -9,9 +10,12 @@
 @import 'base/icons';
 @import 'base/typography';
 @import 'base/grid';
+@import 'base/layout';
 
 @import 'modules/forms';
 @import 'modules/buttons';
 @import 'modules/modals';
+@import 'modules/top-panel';
+@import 'modules/aside-panel';
 
 @import 'pages/home';
