--- a/sass/modules/_buttons.scss
+++ b/sass/modules/_buttons.scss
@@ -1,22 +1,47 @@
 .btn{
 	display: inline-block;
-	vertical-align: top;
 	position: relative;
-	padding: 5px 20px;
-	font-size: 14px;
-	font-family: $font;
+	padding: 10px 30px;
+	vertical-align: top;
+	font-size: 20px;
+	font-family: $font-head;
+	font-weight: bold;
 	line-height: 1.3;
+	letter-spacing: 0.06em;
 	text-decoration: none;
 	text-align: center;
 	white-space: nowrap;
+	border: 1px solid #DDD;
+	border-radius: 30px;
+	text-transform: uppercase;
 	cursor: pointer;
 	transition: all 0.3s ease;
 	user-select: none;
 	background-color: #DDD;
-	border: 1px solid #DDD;
 
 	&:focus{
 		outline: none;
+	}
+
+	&--mini {
+		padding: 14px 30px;
+		font-size: 16px;
+		@include res(xl) {
+			padding: 12px 22px;
+		}
+		@include res(l) {
+			padding: 10px 16px;
+			font-size: 14px;
+		}
+	}
+	&--white {
+		border: 1px solid #fff;
+		background: #fff;
+		&:hover {
+			color: #fff;
+			border-color: $pink;
+			background: $pink;
+		}
 	}
 }
 
